--- a/bbl/i18n/de/BambuStudio_de.po
+++ b/bbl/i18n/de/BambuStudio_de.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-17 12:28+0800\n"
+"POT-Creation-Date: 2022-12-21 10:35+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1928,6 +1928,18 @@ msgid ""
 "Disable overhang slowing down automatically? \n"
 "Yes - Enable arachne and disable overhang slowing down\n"
 "No  - Give up using arachne this time"
+msgstr ""
+
+msgid ""
+"We have added an experimental style \"Tree Slim\" that features smaller "
+"support volume but weaker strength.\n"
+"We recommand using it with: 0 interface layers, 0 top distance, 2 walls.\n"
+msgstr ""
+
+msgid ""
+"Change these settings automatically? \n"
+"Yes - Change these settings automatically\n"
+"No  - Do not change these settings for me"
 msgstr ""
 
 msgid ""
@@ -7169,20 +7181,15 @@ msgstr "Support-Erzeugung aktivieren."
 
 msgid ""
 "normal(auto) and tree(auto) is used to generate support automatically. If "
-"normal or tree is selected, only support enforcers are generated"
+"normal(manual) or tree(manual) is selected, only support enforcers are "
+"generated"
 msgstr ""
-"Normal(automatisch) und Baum(automatisch) wird verwendet, um automatischen "
-"Support zu erzeugen. Wenn Normal oder Baum ausgewählt ist, werden nur "
-"Support Enforcer erzeugt"
 
 msgid "normal(auto)"
 msgstr "Normal(automatisch)"
 
 msgid "tree(auto)"
 msgstr "Baum(automatisch)"
-
-msgid "hybrid(auto)"
-msgstr "Hybrid(automatisch)"
 
 msgid "normal(manual)"
 msgstr ""
@@ -7232,9 +7239,12 @@ msgstr ""
 msgid "The z gap between the bottom support interface and object"
 msgstr ""
 
+msgid "Support base"
+msgstr ""
+
 msgid ""
-"Filament to print support and raft. \"Default\" means no specific filament "
-"for support and current filament is used"
+"Filament to print support base and raft. \"Default\" means no specific "
+"filament for support and current filament is used"
 msgstr ""
 
 msgid "Line width of support"
@@ -7318,8 +7328,26 @@ msgstr "Druckgeschwindigkeit für Supports"
 msgid "Style"
 msgstr "Stil"
 
+msgid ""
+"Style and shape of the support. For normal support, projecting the supports "
+"into a regular grid will create more stable supports (default), while snug "
+"support towers will save material and reduce object scarring.\n"
+"For tree support, tight style will merge branches more aggressively and save "
+"a lot of material (default), while hybrid style will create similar "
+"structure to normal support under large flat overhangs."
+msgstr ""
+
 msgid "Snug"
 msgstr "Nahtlos"
+
+msgid "Tree Slim"
+msgstr ""
+
+msgid "Tree Strong"
+msgstr ""
+
+msgid "Tree Hybrid"
+msgstr ""
 
 msgid "Independent support layer height"
 msgstr "Unabhängige Support-Schichthöhe"
@@ -7987,6 +8015,17 @@ msgid ""
 "Did you know that you can use more wall loops and higher sparse infill "
 "density to improve the strength of the model?"
 msgstr ""
+
+#~ msgid ""
+#~ "normal(auto) and tree(auto) is used to generate support automatically. If "
+#~ "normal or tree is selected, only support enforcers are generated"
+#~ msgstr ""
+#~ "Normal(automatisch) und Baum(automatisch) wird verwendet, um "
+#~ "automatischen Support zu erzeugen. Wenn Normal oder Baum ausgewählt ist, "
+#~ "werden nur Support Enforcer erzeugt"
+
+#~ msgid "hybrid(auto)"
+#~ msgstr "Hybrid(automatisch)"
 
 #~ msgid ""
 #~ "Spiral mode only works when wall loops is 1, \n"
