--- a/bbl/i18n/hu/BambuStudio_hu.po
+++ b/bbl/i18n/hu/BambuStudio_hu.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-17 12:28+0800\n"
+"POT-Creation-Date: 2022-12-21 10:35+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1918,6 +1918,18 @@ msgid ""
 "Disable overhang slowing down automatically? \n"
 "Yes - Enable arachne and disable overhang slowing down\n"
 "No  - Give up using arachne this time"
+msgstr ""
+
+msgid ""
+"We have added an experimental style \"Tree Slim\" that features smaller "
+"support volume but weaker strength.\n"
+"We recommand using it with: 0 interface layers, 0 top distance, 2 walls.\n"
+msgstr ""
+
+msgid ""
+"Change these settings automatically? \n"
+"Yes - Change these settings automatically\n"
+"No  - Do not change these settings for me"
 msgstr ""
 
 msgid ""
@@ -7148,20 +7160,15 @@ msgstr "Engedélyezi a támasz generálását."
 
 msgid ""
 "normal(auto) and tree(auto) is used to generate support automatically. If "
-"normal or tree is selected, only support enforcers are generated"
+"normal(manual) or tree(manual) is selected, only support enforcers are "
+"generated"
 msgstr ""
-"A normál (auto), hibrid (auto) és fa (auto) támaszok automatikus "
-"generálására szolgál. Ha normál vagy fa van kiválasztva, akkor csak a támasz "
-"kényszerítők kerülnek legenerálásra."
 
 msgid "normal(auto)"
 msgstr "normál (auto)"
 
 msgid "tree(auto)"
 msgstr "fa (auto)"
-
-msgid "hybrid(auto)"
-msgstr "hibrid (auto)"
 
 msgid "normal(manual)"
 msgstr ""
@@ -7210,9 +7217,12 @@ msgstr ""
 msgid "The z gap between the bottom support interface and object"
 msgstr ""
 
+msgid "Support base"
+msgstr ""
+
 msgid ""
-"Filament to print support and raft. \"Default\" means no specific filament "
-"for support and current filament is used"
+"Filament to print support base and raft. \"Default\" means no specific "
+"filament for support and current filament is used"
 msgstr ""
 
 msgid "Line width of support"
@@ -7297,8 +7307,26 @@ msgstr "Támaszok sebessége"
 msgid "Style"
 msgstr "Stílus"
 
+msgid ""
+"Style and shape of the support. For normal support, projecting the supports "
+"into a regular grid will create more stable supports (default), while snug "
+"support towers will save material and reduce object scarring.\n"
+"For tree support, tight style will merge branches more aggressively and save "
+"a lot of material (default), while hybrid style will create similar "
+"structure to normal support under large flat overhangs."
+msgstr ""
+
 msgid "Snug"
 msgstr "Szoros"
+
+msgid "Tree Slim"
+msgstr ""
+
+msgid "Tree Strong"
+msgstr ""
+
+msgid "Tree Hybrid"
+msgstr ""
 
 msgid "Independent support layer height"
 msgstr "Független támasz rétegmagassága"
@@ -7959,6 +7987,17 @@ msgid ""
 "Did you know that you can use more wall loops and higher sparse infill "
 "density to improve the strength of the model?"
 msgstr ""
+
+#~ msgid ""
+#~ "normal(auto) and tree(auto) is used to generate support automatically. If "
+#~ "normal or tree is selected, only support enforcers are generated"
+#~ msgstr ""
+#~ "A normál (auto), hibrid (auto) és fa (auto) támaszok automatikus "
+#~ "generálására szolgál. Ha normál vagy fa van kiválasztva, akkor csak a "
+#~ "támasz kényszerítők kerülnek legenerálásra."
+
+#~ msgid "hybrid(auto)"
+#~ msgstr "hibrid (auto)"
 
 #~ msgid ""
 #~ "Spiral mode only works when wall loops is 1, \n"
