--- a/bbl/i18n/nl/BambuStudio_nl.po
+++ b/bbl/i18n/nl/BambuStudio_nl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-17 12:28+0800\n"
+"POT-Creation-Date: 2022-12-21 10:35+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1923,6 +1923,18 @@ msgid ""
 "Disable overhang slowing down automatically? \n"
 "Yes - Enable arachne and disable overhang slowing down\n"
 "No  - Give up using arachne this time"
+msgstr ""
+
+msgid ""
+"We have added an experimental style \"Tree Slim\" that features smaller "
+"support volume but weaker strength.\n"
+"We recommand using it with: 0 interface layers, 0 top distance, 2 walls.\n"
+msgstr ""
+
+msgid ""
+"Change these settings automatically? \n"
+"Yes - Change these settings automatically\n"
+"No  - Do not change these settings for me"
 msgstr ""
 
 msgid ""
@@ -7180,20 +7192,15 @@ msgstr "Dit maakt het genereren van support mogelijk."
 
 msgid ""
 "normal(auto) and tree(auto) is used to generate support automatically. If "
-"normal or tree is selected, only support enforcers are generated"
+"normal(manual) or tree(manual) is selected, only support enforcers are "
+"generated"
 msgstr ""
-"normal (auto), hybride (auto) en tree (auto) worden gebruikt om automatisch "
-"support te genereren. Als normaal of tree is geselecteerd, worden alleen "
-"vereiste support gegenereerd."
 
 msgid "normal(auto)"
 msgstr "Normaal (automatisch)"
 
 msgid "tree(auto)"
 msgstr "tree(auto)"
-
-msgid "hybrid(auto)"
-msgstr "Hybride (automatisch)"
 
 msgid "normal(manual)"
 msgstr ""
@@ -7242,9 +7249,12 @@ msgstr ""
 msgid "The z gap between the bottom support interface and object"
 msgstr ""
 
+msgid "Support base"
+msgstr ""
+
 msgid ""
-"Filament to print support and raft. \"Default\" means no specific filament "
-"for support and current filament is used"
+"Filament to print support base and raft. \"Default\" means no specific "
+"filament for support and current filament is used"
 msgstr ""
 
 msgid "Line width of support"
@@ -7330,8 +7340,26 @@ msgstr "Dit is de snelheid voor het printen van support."
 msgid "Style"
 msgstr "Stijl"
 
+msgid ""
+"Style and shape of the support. For normal support, projecting the supports "
+"into a regular grid will create more stable supports (default), while snug "
+"support towers will save material and reduce object scarring.\n"
+"For tree support, tight style will merge branches more aggressively and save "
+"a lot of material (default), while hybrid style will create similar "
+"structure to normal support under large flat overhangs."
+msgstr ""
+
 msgid "Snug"
 msgstr "Nauwsluitend"
+
+msgid "Tree Slim"
+msgstr ""
+
+msgid "Tree Strong"
+msgstr ""
+
+msgid "Tree Hybrid"
+msgstr ""
 
 msgid "Independent support layer height"
 msgstr "Onafhankelijke support laaghoogte"
@@ -7997,6 +8025,17 @@ msgid ""
 "Did you know that you can use more wall loops and higher sparse infill "
 "density to improve the strength of the model?"
 msgstr ""
+
+#~ msgid ""
+#~ "normal(auto) and tree(auto) is used to generate support automatically. If "
+#~ "normal or tree is selected, only support enforcers are generated"
+#~ msgstr ""
+#~ "normal (auto), hybride (auto) en tree (auto) worden gebruikt om "
+#~ "automatisch support te genereren. Als normaal of tree is geselecteerd, "
+#~ "worden alleen vereiste support gegenereerd."
+
+#~ msgid "hybrid(auto)"
+#~ msgstr "Hybride (automatisch)"
 
 #~ msgid ""
 #~ "Spiral mode only works when wall loops is 1, \n"
