--- a/bbl/i18n/zh_cn/BambuStudio_zh_CN.po
+++ b/bbl/i18n/zh_cn/BambuStudio_zh_CN.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Slic3rPE\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-17 12:28+0800\n"
+"POT-Creation-Date: 2022-12-21 10:35+0800\n"
 "PO-Revision-Date: 2022-12-13 20:18+0800\n"
 "Last-Translator: Jiang Yue <maze1024@gmail.com>\n"
 "Language-Team: \n"
@@ -708,7 +708,7 @@ msgid "Set filament for selected items"
 msgstr "设置所选项的耗材丝"
 
 msgid "Default"
-msgstr "默认"
+msgstr "缺省"
 
 #, c-format, boost-format
 msgid "Filament %d"
@@ -1823,7 +1823,9 @@ msgstr ""
 msgid ""
 "Spiral mode only works when wall loops is 1, support is disabled, top shell "
 "layers is 0, sparse infill density is 0 and timelapse type is traditional"
-msgstr "旋转模式只能在外墙层数为1，关闭支撑，顶层层数为0，稀疏填充密度为0，传统延时摄影时有效"
+msgstr ""
+"旋转模式只能在外墙层数为1，关闭支撑，顶层层数为0，稀疏填充密度为0，传统延时摄"
+"影时有效"
 
 msgid ""
 "Change these settings automatically? \n"
@@ -1849,6 +1851,21 @@ msgstr ""
 "自动关闭悬垂降速？\n"
 "是 - 使用arachne并关闭悬垂降速\n"
 "否 - 此次放弃使用arachne"
+
+msgid ""
+"We have added an experimental style \"Tree Slim\" that features smaller "
+"support volume but weaker strength.\n"
+"We recommand using it with: 0 interface layers, 0 top distance, 2 walls.\n"
+msgstr ""
+
+msgid ""
+"Change these settings automatically? \n"
+"Yes - Change these settings automatically\n"
+"No  - Do not change these settings for me"
+msgstr ""
+"自动调整这些设置？\n"
+"是 - 自动调整这些设置\n"
+"否 - 不用为我调整这些设置"
 
 msgid ""
 "Prime tower does not work when Adaptive Layer Height or Independent Support "
@@ -2475,7 +2492,7 @@ msgid "No"
 msgstr "否"
 
 msgid " will be closed before creating a new model. Do you want to continue?"
-msgstr "会被关闭以创建新模型。是否继续？"
+msgstr "将会被关闭以创建新模型。是否继续？"
 
 msgid "Slice"
 msgstr "切片"
@@ -6886,19 +6903,17 @@ msgstr "开启支撑生成。"
 
 msgid ""
 "normal(auto) and tree(auto) is used to generate support automatically. If "
-"normal or tree is selected, only support enforcers are generated"
+"normal(manual) or tree(manual) is selected, only support enforcers are "
+"generated"
 msgstr ""
-"普通（自动）和树状（自动）用于自动生成支撑体。如果选择普通或树状，仅会在支撑"
-"强制面上生成支撑。"
+"普通（自动）和树状（自动）用于自动生成支撑体。如果选择普通（手动）"
+"或树状（手动），仅会在支撑强制面上生成支撑。"
 
 msgid "normal(auto)"
 msgstr "普通(自动)"
 
 msgid "tree(auto)"
 msgstr "树状(自动)"
-
-msgid "hybrid(auto)"
-msgstr "混合(自动)"
 
 msgid "normal(manual)"
 msgstr "普通(手动)"
@@ -6944,10 +6959,13 @@ msgstr "底部Z距离"
 msgid "The z gap between the bottom support interface and object"
 msgstr "支撑生成于模型表面时，支撑面底部和模型之间的z间隙"
 
+msgid "Support base"
+msgstr "支撑主体"
+
 msgid ""
-"Filament to print support and raft. \"Default\" means no specific filament "
-"for support and current filament is used"
-msgstr "打印支撑和筏层的耗材丝。“默认”代表不指定特定的耗材丝，并使用当前耗材"
+"Filament to print support base and raft. \"Default\" means no specific "
+"filament for support and current filament is used"
+msgstr "打印支撑主体和筏层的耗材丝。\"缺省\"代表不指定特定的耗材丝，并使用当前耗材"
 
 msgid "Line width of support"
 msgstr "支撑的线宽"
@@ -6962,7 +6980,7 @@ msgstr "使用圈形走线覆盖顶部接触面。默认关闭。"
 msgid ""
 "Filament to print support interface. \"Default\" means no specific filament "
 "for support interface and current filament is used"
-msgstr "打印支撑接触面的耗材丝。“默认”代表不指定特定的耗材丝，并使用当前耗材"
+msgstr "打印支撑接触面的耗材丝。\"缺省\"代表不指定特定的耗材丝，并使用当前耗材"
 
 msgid "Top interface layers"
 msgstr "顶部接触面层数"
@@ -7026,8 +7044,26 @@ msgstr "支撑打印速度"
 msgid "Style"
 msgstr "样式"
 
+msgid ""
+"Style and shape of the support. For normal support, projecting the supports "
+"into a regular grid will create more stable supports (default), while snug "
+"support towers will save material and reduce object scarring.\n"
+"For tree support, tight style will merge branches more aggressively and save "
+"a lot of material (default), while hybrid style will create similar "
+"structure to normal support under large flat overhangs."
+msgstr ""
+
 msgid "Snug"
 msgstr "紧贴"
+
+msgid "Tree Slim"
+msgstr ""
+
+msgid "Tree Strong"
+msgstr ""
+
+msgid "Tree Hybrid"
+msgstr ""
 
 msgid "Independent support layer height"
 msgstr "支撑独立层高"
@@ -7748,6 +7784,22 @@ msgid ""
 msgstr ""
 "提高强度\n"
 "你知道吗？你可以使用更多的墙层数和更高的疏散填充密度来提高模型的强度。"
+
+#~ msgid ""
+#~ "normal(auto) and tree(auto) is used to generate support automatically. If "
+#~ "normal or tree is selected, only support enforcers are generated"
+#~ msgstr ""
+#~ "普通（自动）和树状（自动）用于自动生成支撑体。如果选择普通或树状，仅会在支"
+#~ "撑强制面上生成支撑。"
+
+#~ msgid "hybrid(auto)"
+#~ msgstr "混合(自动)"
+
+#~ msgid ""
+#~ "Filament to print support and raft. \"Default\" means no specific "
+#~ "filament for support and current filament is used"
+#~ msgstr ""
+#~ "打印支撑和筏层的耗材丝。\"缺省\"代表不指定特定的耗材丝，并使用当前耗材"
 
 #~ msgid ""
 #~ "Spiral mode only works when wall loops is 1, \n"
